configurations/rts-k8s/hashicorp_vault/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: vault-ingress
  namespace: hashicorp-vault
  annotations: 
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
spec:
  ingressClassName: nginx-internal
  tls:
  - hosts:
    - vault.roeden.corp
    secretName: vault-tls-secret
  rules:
  - host: vault.roeden.corp
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: vault-ui
            port:
              number: 8200
